# microTrading_interview

./: .gitattributes  .gitignore  README.md  config.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.en.md  README.zh-CN.md  code assignment - qd.txt  design.md
src/kline/: __init__.py  aggregator.py  checkpoint.py  config_loader.py  logger.py  models.py  preprocessor.py  reader.py  writer.py
src/kline/core/: __init__.py  aggregator.py  models.py  state.py
src/kline/io/: __init__.py  reader.py  writer.py  writer_state.py
src/kline/runtime/: __init__.py  aggregation_runner.py  checkpoint.py  config_loader.py  logger.py
tests/: config_for_test.ini  conftest.py  sample_ticks.csv  sample_ticks_100.csv  test_aggregator.py  test_checkpoint.py  test_config_loader.py  test_preprocessor.py  test_reader.py  test_runner.py  test_writer.py
